# listen-panel

./: .env.example  .gitignore  CHANGELOG.md  README.md  dev.sh
asr-worker/: .env.example  README.md  requirements.txt  worker.py
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20260503000001_init.sql  20260503142327_auth.sql  20260503150500_upload_ownership.sql  20260503162000_transcription.sql  20260503194000_transcript_segment_studies.sql  20260503195500_default_study_pending.sql  20260503200000_reset_stale_study_running.sql  20260504000500_study_progress.sql  20260504110000_material_notes.sql  20260504150000_multilingual_materials.sql  20260507120000_material_text_source.sql  20260520000000_news_and_idiom.sql  20260521000000_news_source_drop_check.sql  20260523000000_news_quality.sql  20260523120000_segment_furigana.sql  20260523150000_quick_notes.sql  20260526000000_writing_drafts.sql  20260526000100_cloze_exercises.sql  20260526000200_model_essays.sql  20260527000000_essay_video_url.sql  20260527000100_essay_translations.sql  20260527000200_vocab_essay_owner.sql  20260529000000_study_pause_flag.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  furigana.rs  language.rs  llm_call.rs  main.rs  models.rs  news_fetcher.rs  paths.rs  study.rs  youtube.rs
backend/src/routes/: asr.rs  auth.rs  backup.rs  cloze.rs  essays.rs  health.rs  llm.rs  materials.rs  media.rs  mod.rs  news.rs  notes.rs  pronunciation.rs  quick_notes.rs  settings.rs  tts.rs  vocab.rs  writing.rs
backend/src/routes/writing/: detector.rs
(+60 files in other folders)
